--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
             <script type="text/javascript" src="script/jquery-latest.js"></script>
             <link rel="shortcut icon" href="img/icon.ico" />
             <meta name="viewport" content="width=device-width, user-scalable=yes" />
-            <!--<link rel="stylesheet" href="css/responsive.css" /> -->
             <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-            <!--<link rel="stylesheet" href="../css/themes/default/jquery.mobile-1.4.5.min.css"> -->
             <script src="../js/jquery.js"></script>
             <script src="../_assets/js/index.js"></script>
-            <!--<script src="jqm/jquery.mobile-1.4.5.min.js"></script>-->
             <link rel="stylesheet" href="css/bootstrap.css" />
-             <script src="bootstrap/js/bootstrap.min.js"></script>
+            <script src="bootstrap/js/bootstrap.min.js"></script>
             <link href="boostrap/css/bootstrap.min.css" rel="stylesheet">
             <script type="text/javascript" src="script/script.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.min.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.js"></script>
-                        <link rel="stylesheet" href="style.css" />
-                        <link rel="stylesheet" href="css/responsive.css" />
+            <link rel="stylesheet" href="style.css" />
+            <link rel="stylesheet" href="css/responsive.css" />
     </head>
 
     <body>
@@ -174,10 +171,10 @@
                                                 <div class="sujet">Base de données </div> <div class="ville">MySQL, Microsoft SQL Server</div>
                                           </li>
                                           <li>
-                                                <div class="sujet">Logiciels</div> <div class="ville">SVN, Word, Excel, Virtualbox, MySQL Workbench, Photofiltre</div>
+                                                <div class="sujet">Logiciels</div> <div class="ville">SourceTree, SVN, Word, Excel, Virtualbox, MySQL Workbench, PhotoShop</div>
                                           </li>
                                           <li>
-                                                <div class="sujet">Modélisation</div> <div class="ville">Merise, UML</div>
+                                                <div class="sujet">Modélisation</div> <div class="ville">UML</div>
                                           </li>
                                     </ul>
 
