--- a/index.html
+++ b/index.html
@@ -199,8 +199,11 @@
                                     <h3>Mes Activités transversales</h3>
 
                                           <ul>
+                                          	<li>
+                                                    <div class="sujet"> janvier 2016</div> <div class="ville"> Brevet Secouriste </div> <div class="lieu">Croix Blanche</div>
+                                              </li>
                                                <li>
-                                                    <div class="sujet">2014-2015 (en cours)</div> <div class="ville"> animateur Chef Scout </div> <div class="lieu">Scout et Guide de France</div>
+                                                    <div class="sujet">2014-2016 (en cours)</div> <div class="ville"> animateur Chef Scout </div> <div class="lieu">Scout et Guide de France</div>
                                               </li>
                                               <li>
                                                     <div class="sujet">Sport</div> <div class="ville">badminton (4 ans)</div>
