--- a/index.html
+++ b/index.html
@@ -165,16 +165,22 @@
 
                                     <ul>
                                           <li>
-                                                <div class="sujet">Langages</div> <div class="ville">  Java, C#, MySQL, HTML 5, PHP, JQuery, C, Python, Cobol</div>
+                                                <div class="sujet">Langages</div> <div class="ville">  Java, C#, HTML 5, PHP, Python, Cobol</div>
+                                          </li>
+                                          <li>
+                                                <div class="sujet">Frameworks</div> <div class="ville"> JQuery, Symfony2, GWT, Boostrap</div>
                                           </li>
                                           <li>
                                                 <div class="sujet">Base de données </div> <div class="ville">MySQL, Microsoft SQL Server</div>
                                           </li>
                                           <li>
-                                                <div class="sujet">Logiciels</div> <div class="ville">SourceTree, SVN, Word, Excel, Virtualbox, MySQL Workbench, PhotoShop</div>
+                                                <div class="sujet">Logiciels</div> <div class="ville">Android Studio, Talend Open Studio, Git, SVN, , Virtualbox, MySQL Workbench, PhotoShop</div>
                                           </li>
                                           <li>
                                                 <div class="sujet">Modélisation</div> <div class="ville">UML</div>
+                                          </li>
+                                          <li>
+                                                <div class="sujet">Autres technologies</div> <div class="ville">WordPress, Java EE</div>
                                           </li>
                                     </ul>
 
