--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                                 <div class="sujet">Langages</div> <div class="ville">  Java, C#, HTML 5, PHP, Python, Cobol</div>
                                           </li>
                                           <li>
-                                                <div class="sujet">Frameworks</div> <div class="ville"> JQuery, Symfony2, GWT, Boostrap</div>
+                                                <div class="sujet">Frameworks</div> <div class="ville"> JQuery, Symfony2, GWT, Boostrap, JUnit</div>
                                           </li>
                                           <li>
                                                 <div class="sujet">Base de données </div> <div class="ville">MySQL, Microsoft SQL Server</div>
