--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </head>
 
     <body>
-
+      <a href="#menuMobile" id="showMenuLien">
+        <img src="img/menu.ico" id="showMenuImage"/>
+      </a>
       <div id="menuMobile">
                   <div id="espaceImageMobile" class="espaceImage">
                           <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" id="photoProfil"/>
