-inclusion des icones ainsi que des liens vers les entités - mise à jour du CV - mise à jour du style des listes

--- a/index.html
+++ b/index.html
@@ -109,56 +109,96 @@
                               </article>
                               <article id="expPro" class="cachee">
 
-
-                                <h3>Experience Professionnelle</h3>
-
-                                      <ul>
-                                        <li>
-                                              <div class="sujet">Actuellement</div> <div class="lieu">Rectorat de l'académie de Toulouse</div>  <div class="ville">Développeur Web - Maintenance d'application Web</div>
-                                              <ul id="description">
-                                                  <li>
-                                                          Framework: Symfony 2
-                                                  </li>
-                                                  <li>
-                                                          Base de données: MySQl
-                                                  </li>
+                                  <h3>Experience Professionnelle</h3>
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <ul>
+                                                    <li>
+                                                        <div class="sujet">2015-2016 Alternance (10 mois)</div> <div class="lieu">Rectorat de l'académie de Toulouse</div>  <div class="ville">Développeur Web - Maintenance d'application Web</div>
+                                                        <ul class="description">
+                                                            <li>
+                                                                Framework: Symfony 2
+                                                            </li>
+                                                            <li>
+                                                                Base de données: MySQL
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </td>
+                                            <td class ="deuxiemeColonne">
+                                                <a href="http://www.ac-toulouse.fr/"><img src="img/academie_toulouse.png" id="logoAcToulouse" class="logo"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <ul>
+                                                <li>
+                                                      <div class="sujet">2015 Stage (2 mois)</div> <div class="lieu">Martell (groupe Pernod-Ricard) - Cognac</div>  <div class="ville">Mission: Refonte entière d'une application SilverLight de l'entreprise. </div>
+                                                      <ul class="description">
+                                                          <li>
+                                                                  Base de données: Microsoft SQL
+                                                          </li>
+                                                          <li>
+                                                                  Interface graphique: DevExpress (C#, xaml)
+                                                          </li>
+                                                          <li>
+                                                                  Développement partie technique(fonctionnalités et Web Service): C#
+                                                          </li>
+                                                      </ul>
+                                                </li>
                                               </ul>
-                                        </li>
-                                        <li>
-                                              <div class="sujet">2015 Stage (2 mois)</div> <div class="lieu">Martell (groupe Pernod-Ricard) - Cognac</div>  <div class="ville">Mission: Refonte entière d'une application SilverLight de l'entreprise. </div>
-                                              <ul id="description">
-                                                  <li>
-                                                          Base de données: Microsoft SQL
-                                                  </li>
-                                                  <li>
-                                                          Interface graphique: DevExpress (C#, xaml)
-                                                  </li>
-                                                  <li>
-                                                          Développement partie technique(fonctionnalités et Web Service): C#
-                                                  </li>
-                                              </ul>
-                                        </li>
-                                      </ul>
+                                            </td>
+                                            <td class ="deuxiemeColonne">
+                                                <a href="www.martell.com/fr-fr/"><img src="img/Pernod_Ricard_Logo.png" id="logoMartell" class="logo"></a>
+                                            </td>
+                                        </tr>
+                                        </table>
                                 </article>
                                 <article id="formation" class="cachee">
 
                                         <h3>Formation</h3>
+                              <table>
+                                  <tr>
+                                      <td>
+                                         <ul>
+                                              <li>
+                                                  <div class="sujet">2015-2016 License Professionnelle en alternance APSIO - Analyste Programmeur en Systèmes Ouverts</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
+                                              </li>
 
-                              <ul>
-                                  <li>
-                                        <div class="sujet">2015-2016 License Professionnelle en alternance APSIO - Analyste Programmeur Spécialisé en Ingénierie des Objets</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
-                                  </li>
-                                  <li>
-                                        <div class="sujet">2013-2015 IUT Informatique</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès</div>
-                                  </li>
-                                  <li>
-                                        <div class="sujet">2012-2013 Année préparatoire</div> <div class="ville">EISTI - École Internationale des Sciences et du
-                                              Traitement de l’Information</div>  <div class="lieu">Académie de Bordeaux</div>
-                                  </li>
-                                  <li>
-                                        <div class="sujet">2012 BAC S </div><div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
-                                  </li>
-                              </ul>
+                                              <li>
+                                                  <div class="sujet">2013-2015 IUT Informatique</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès</div>
+                                              </li>
+                                         </ul>
+                                      </td>
+                                      <td class ="deuxiemeColonne">
+                                          <a href="http://www.iut-blagnac.fr/"><img src="img/IUTUT2J-2.png" id="logoIUTBlagnac" class="logo"></a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                          <ul>
+                                              <li>
+                                                    <div class="sujet">2012-2013 Année préparatoire</div> <div class="ville">EISTI - École Internationale des Sciences et du
+                                                          Traitement de l’Information</div>  <div class="lieu">Académie de Bordeaux</div>
+                                              </li>
+                                          </ul>
+                                      <td class ="deuxiemeColonne">
+                                          <a href="https://eisti.fr/"><img src="img/Logo_EISTI.jpg" id="logoEISTI" class="logo"></a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                          <ul>
+                                              <li>
+                                                    <div class="sujet">2012 BAC S </div><div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
+                                              </li>
+                                          </ul>
+                                      </td>
+                                      <td></td>
+                                  </tr>
+                              </table>
                               </article>
 
                               <article id="skill" class="cachee">
@@ -194,10 +234,10 @@
 
                                     <ul>
                                           <li>
-                                                <div class="sujet">Anglais  </div><div class="ville">niveau intermédiaire (B2-C1) </div><div class="lieu">Voyages languistiques Angleterre, Irlande</div>
+                                                <div class="sujet">Anglais  </div><div class="ville">niveau intermédiaire - capable d'entretenir une discussion </div><div class="lieu">Voyages languistiques Angleterre, Irlande, Écosse, Pays-Bas</div>
                                           </li>
                                           <li>
-                                                <div class="sujet">Espagnol </div><div class="ville">niveau B1</div>
+                                                <div class="sujet">Espagnol </div><div class="ville">niveau scolaire</div>
                                           </li>
 
                                     </ul>
