--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <body>
       <a href="#menuMobile" id="showMenuLien">
-        <img src="img/menu.ico" id="showMenuImage"/>
+        <img src="img/menu.png" id="showMenuImage"/>
       </a>
       <div id="menuMobile">
                   <div id="espaceImageMobile" class="espaceImage">
@@ -84,6 +84,7 @@
                         <article id="intro">
                               <h1> Théophane GIRARD</h1>
                               <h3> Développeur Orienté Objet, Développeur Web</h3>
+                    <div id = "introduction ">
       				<p>
       				Titulaire d'un DUT en Informatique, j'apprécie énormément le Développement Web et Développement Orienté Objet.<br> Mon experience professionnelle m'a appris à devenir améliorer mon autonomie puisque au cours de celle-ci, j'ai dû travailler seul sur le projet qui m'a été confié. <br>Mes études et mes formations m'ont permis de développer ma capacité à travailler en équipe, à
       				travailler de façon rigoureuse et à utiliser ma créativité à bon escient.
@@ -91,7 +92,7 @@
       				<p>
       					J'adore les nouvelles technologies, le cinéma et la musique.
       				</p>
-
+                    </div>
                               <hr>
 
 				</article>
