- amélioration affichage sur mobile

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     <table>
                                         <tr>
                                             <td>
-                                                <ul>
+                                                <ul class="listeBord">
                                                     <li>
                                                         <div class="sujet">2015-2016 Alternance (10 mois)</div> <div class="lieu">Rectorat de l'académie de Toulouse</div>  <div class="ville">Développeur Web - Maintenance d'application Web</div>
                                                         <ul class="description">
@@ -134,7 +134,7 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                <ul>
+                                                <ul class="listeBord">
                                                 <li>
                                                       <div class="sujet">2015 Stage (2 mois)</div> <div class="lieu">Martell (groupe Pernod-Ricard) - Cognac</div>  <div class="ville">Mission: Refonte entière d'une application SilverLight de l'entreprise. </div>
                                                       <ul class="description">
@@ -163,7 +163,7 @@
                               <table>
                                   <tr>
                                       <td>
-                                         <ul>
+                                         <ul class="listeBord">
                                               <li>
                                                   <div class="sujet">2015-2016 License Professionnelle en alternance APSIO - Analyste Programmeur en Systèmes Ouverts</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
                                               </li>
@@ -179,7 +179,7 @@
                                   </tr>
                                   <tr>
                                       <td>
-                                          <ul>
+                                          <ul class="listeBord">
                                               <li>
                                                     <div class="sujet">2012-2013 Année préparatoire</div> <div class="ville">EISTI - École Internationale des Sciences et du
                                                           Traitement de l’Information</div>  <div class="lieu">Académie de Bordeaux</div>
@@ -191,7 +191,7 @@
                                   </tr>
                                   <tr>
                                       <td>
-                                          <ul>
+                                          <ul class="listeBord">
                                               <li>
                                                     <div class="sujet">2012 BAC S </div><div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
                                               </li>
@@ -206,7 +206,7 @@
 
                                                 <h3>Compétences</h3>
 
-                                    <ul>
+                                    <ul class="listeBord">
                                           <li>
                                                 <div class="sujet">Langages</div> <div class="ville">  Java, C#, HTML 5, PHP, Python, Cobol</div>
                                           </li>
@@ -233,7 +233,7 @@
 
                                     <h3>Langues</h3>
 
-                                    <ul>
+                                    <ul class="listeBord">
                                           <li>
                                                 <div class="sujet">Anglais  </div><div class="ville">niveau intermédiaire - capable d'entretenir une discussion </div><div class="lieu">Voyages languistiques Angleterre, Irlande, Écosse, Pays-Bas</div>
                                           </li>
@@ -247,7 +247,7 @@
                               <article id="centreInteret" class="cachee">
                                     <h3>Mes Activités transversales</h3>
 
-                                          <ul>
+                                          <ul class="listeBord">
                                           	<li>
                                                     <div class="sujet"> janvier 2016</div> <div class="ville"> Brevet Secouriste </div> <div class="lieu">Croix Blanche</div>
                                               </li>
