--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
             <link rel="shortcut icon" href="img/icon.ico" />
             <meta name="viewport" content="width=device-width, user-scalable=yes" />
             <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-            <script src="../js/jquery.js"></script>
-            <!--<script src="../_assets/js/index.js"></script>!-->
             <link rel="stylesheet" href="css/bootstrap.css" />
             <script src="bootstrap/js/bootstrap.min.js"></script>
             <link href="boostrap/css/bootstrap.min.css" rel="stylesheet">
@@ -86,11 +84,7 @@
                               <h3> Développeur Orienté Objet, Développeur Web</h3>
                     <div id = "introduction ">
       				<p>
-      				Titulaire d'un DUT en Informatique, j'apprécie énormément le Développement Web et Développement Orienté Objet.<br> Mon experience professionnelle m'a appris à devenir améliorer mon autonomie puisque au cours de celle-ci, j'ai dû travailler seul sur le projet qui m'a été confié. <br>Mes études et mes formations m'ont permis de développer ma capacité à travailler en équipe, à
-      				travailler de façon rigoureuse et à utiliser ma créativité à bon escient.
-      				</p>
-      				<p>
-      					J'adore les nouvelles technologies, le cinéma et la musique.
+      				Titulaire d'un DUT en Informatique et d'une licence professionnelle APSIO, je souhaite m'orienter vers le Développement Web.<br> Mes contrats de stages et d'alternance m'ont permis d'avoir des experiences professionnelles dans ces domaines. Ces experiences m'ont fait progresser en autonomie, puisque j'ai souvent essayé de trouver des solutions par mes propres moyens. J'ai également améliorer ma capacité d'adaptation car lors de mes projets, j'ai dû reprendre, adapter ou améliorer du code existant.  <br>Par ailleurs, mes études et mes formations m'ont apporté des bases solides dans divers langages de programmations et dans diverses technologies. 
       				</p>
                     </div>
                               <hr>
