--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                               </ul>
                                             </td>
                                             <td class ="deuxiemeColonne">
-                                                <a href="www.martell.com/fr-fr/"><img src="img/Pernod_Ricard_Logo.png" id="logoMartell" class="logo"></a>
+                                                <a href="https://www.martell.com/fr-fr/"><img src="img/Pernod_Ricard_Logo.png" id="logoMartell" class="logo"></a>
                                             </td>
                                         </tr>
                                         </table>
@@ -257,10 +257,9 @@
                                         </ul>
                               </article>
 
-
+                    </div>
                   </section>
             </div>
-      </div>
 <!--      <div class="row" id="credits">
             <div class="col-lg-12 col-xs-12 col-sm-12"  id="footer">
                   site développé par Théophane girard, hébergé par gitHub
