--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
             <link rel="stylesheet" href="css/bootstrap.css" />
             <script src="bootstrap/js/bootstrap.min.js"></script>
-            <link href="boostrap/css/bootstrap.min.css" rel="stylesheet">
+            <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
             <script type="text/javascript" src="script/script.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.min.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.js"></script>
@@ -23,7 +23,7 @@
       </a>
       <div id="menuMobile">
                   <div id="espaceImageMobile" class="espaceImage">
-                          <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" id="photoProfil"/>
+                          <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil"/>
                           <div class="dispositionIcone">
                                 <a href="mailto:girard.theophane@gmail.com"><img src="img/gmail.png"  class="iconeReseauxSociaux img-zoom"></a>
 
@@ -52,7 +52,7 @@
             <div class="row" id="container">
                   <div class="col-lg-4 col-sm-4 hidden-xs visible" id="menuPC">
                               <div id="espaceImagePC" class="espaceImage">
-                                      <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" id="photoProfil"/>
+                                      <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil"/>
                                       <div class="dispositionIcone">
                                             <a href="mailto:girard.theophane@gmail.com"><img src="img/gmail.png"  class="iconeReseauxSociaux img-zoom"></a>
 
@@ -266,15 +266,4 @@
             </div>
       </div>-->
       </body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-76242519-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
 </html>
