--- a/index.html
+++ b/index.html
@@ -95,11 +95,41 @@
 
                               <article class ="active haut"  id="profil">
                                     <h3>Profil</h3>
-                                    <div class="largeurInfo"><em>Mail :</em><span>girard.theophane@gmail.com</span></div><div class="largeurInfo"> <em>ville :</em><span>Toulouse</span></div>
+
+                                      <table>
+                                          <tr>
+                                              <td class="titre">Mail :</td>
+                                              <td class="detailProfil">girard.theophane@gmail.com</td>
+                                          </tr>
+                                      </table>
+                                        <br>
+                                      <table>
+                                          <tr>
+                                              <td class="titre">ville :</td>
+                                              <td class="detailProfil">Toulouse</td>
+                                          </tr>
+                                      </table>
+                                         <br>
+                                      <table>
+                                          <tr>
+                                              <td class="titre">Téléphone :</td>
+                                              <td class="detailProfil">06 69 10 82 27</td>
+                                          </tr>
+                                      </table>
+                                         <br>
+                                  <table>
+                                      <tr>
+                                          <td class="titre">Permis :</td>
+                                          <td class="detailProfil">B</td>
+                                      </tr>
+                                  </table>
+
+
+<!--                                    <div class="largeurInfo"><em>Mail :</em><span>girard.theophane@gmail.com</span></div><div class="largeurInfo"> <em>ville :</em><span>Toulouse</span></div>
                                     <br><br>
                                     <div class="largeurInfo"><em>Tel :</em><span>06 69 10 82 27</span></div> <div class="largeurInfo"><em>Permis :</em><span>B</span></div>
                                     <br><br>
-                                    <div class="largeurInfo"><em>Âge :</em><span>21 ans (1994)</span></div>
+                                    <div class="largeurInfo"><em>Âge :</em><span>21 ans (1994)</span></div>-->
 
                               </article>
                               <article id="expPro" class="cachee">
@@ -267,3 +297,4 @@
       </div>-->
       </body>
 </html>
+
