--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                                 </ul>
                                             </td>
                                             <td class ="deuxiemeColonne">
-                                                <a href="http://www.ac-toulouse.fr/"><img src="img/academie_toulouse.png" id="logoAcToulouse" class="logo"></a>
+                                                <a href="http://www.ac-toulouse.fr/"><img src="img/academie_toulouse.png" id="logoAcToulouse" class="logo" title="Se rendre sur le site de l'académie de Toulouse"></a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -176,7 +176,7 @@
                                               </ul>
                                             </td>
                                             <td class ="deuxiemeColonne">
-                                                <a href="https://www.martell.com/fr-fr/"><img src="img/Pernod_Ricard_Logo.png" id="logoMartell" class="logo"></a>
+                                                <a href="https://www.martell.com/fr-fr/"><img src="img/Pernod_Ricard_Logo.png" id="logoMartell" class="logo" title="Se rendre sur le site de l'entreprise Martell"></a>
                                             </td>
                                         </tr>
                                         </table>
@@ -198,7 +198,7 @@
                                          </ul>
                                       </td>
                                       <td class ="deuxiemeColonne">
-                                          <a href="http://www.iut-blagnac.fr/"><img src="img/IUTUT2J-2.png" id="logoIUTBlagnac" class="logo"></a>
+                                          <a href="http://www.iut-blagnac.fr/"><img src="img/IUTUT2J-2.png" id="logoIUTBlagnac" class="logo" title="Se rendre sur le site de l'IUT de Blagnac"></a>
                                       </td>
                                   </tr>
                                   <tr>
@@ -210,7 +210,7 @@
                                               </li>
                                           </ul>
                                       <td class ="deuxiemeColonne">
-                                          <a href="https://eisti.fr/"><img src="img/Logo_EISTI.jpg" id="logoEISTI" class="logo"></a>
+                                          <a href="https://eisti.fr/"><img src="img/Logo_EISTI.jpg" id="logoEISTI" class="logo" title="Se rendre sur le site de l'EISTI"></a>
                                       </td>
                                   </tr>
                                   <tr>
