--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                       <td>
                                          <ul class="listeBord">
                                               <li>
-                                                  <div class="sujet">2015-2016 License Professionnelle en alternance APSIO - Analyste Programmeur en Systèmes Ouverts</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
+                                                  <div class="sujet">2015-2016 Licence Professionnelle en alternance APSIO - Analyste Programmeur en Systèmes Ouverts</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
                                               </li>
 
                                               <li>
