upgrade display smartphone: menu icon

--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     </head>
 
     <body>
-      <a href="#menuMobile" id="showMenuLien">
-        <img src="img/menu.png" id="showMenuImage"/>
-      </a>
       <div id="menuMobile">
                   <div id="espaceImageMobile" class="espaceImage">
                           <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil"/>
@@ -48,8 +45,12 @@
                                           <hr>
                   </div>
       </div>
-
             <div class="row" id="container">
+                <div class="col-lg-1 col-sm-1" id="colonneIconeMenu">
+                    <a href="#menuMobile" id="showMenuLien">
+                        <img src="img/menu.png" id="showMenuImage"/>
+                    </a>
+                </div>
                   <div class="col-lg-4 col-sm-4 hidden-xs visible" id="menuPC">
                               <div id="espaceImagePC" class="espaceImage">
                                       <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil"/>
