--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                               <h3> Développeur Orienté Objet, Développeur Web</h3>
                     <div id = "introduction ">
       				<p>
-      				Titulaire d'un DUT en Informatique et d'une licence professionnelle APSIO, je souhaite m'orienter vers le Développement Web.<br> Mes contrats de stages et d'alternance m'ont permis d'avoir des experiences professionnelles dans ces domaines. Ces experiences m'ont fait progresser en autonomie, puisque j'ai souvent essayé de trouver des solutions par mes propres moyens. J'ai également améliorer ma capacité d'adaptation car lors de mes projets, j'ai dû reprendre, adapter ou améliorer du code existant.  <br>Par ailleurs, mes études et mes formations m'ont apporté des bases solides dans divers langages de programmations et dans diverses technologies. 
+      				Titulaire d'un DUT en Informatique et d'une licence professionnelle APSIO, je souhaite me diriger vers le Développement Web.<br> Mes contrats de stages et d'alternance m'ont permis d'avoir des experiences professionnelles dans ces domaines et ont confirmé ce projet d'orientation. Ces experiences m'ont fait progresser en autonomie, puisque j'ai souvent essayé de trouver des solutions par mes propres moyens. J'ai également amélioré ma capacité d'adaptation car lors de mes projets, j'ai dû reprendre, adapter ou améliorer du code existant.  <br>Par ailleurs, mes études et mes formations m'ont apporté des bases solides dans divers langages de programmations et dans diverses technologies. 
       				</p>
                     </div>
                               <hr>
