--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                               <h3> Développeur Orienté Objet, Développeur Web</h3>
                     <div id = "introduction ">
       				<p>
-      				Titulaire d'un DUT en Informatique et d'une licence professionnelle APSIO, je souhaite me diriger vers le Développement Web.<br> Mes contrats de stages et d'alternance m'ont permis d'avoir des experiences professionnelles dans ces domaines et ont confirmé ce projet d'orientation. Ces experiences m'ont fait progresser en autonomie, puisque j'ai souvent essayé de trouver des solutions par mes propres moyens. J'ai également amélioré ma capacité d'adaptation car lors de mes projets, j'ai dû reprendre, adapter ou améliorer du code existant.  <br>Par ailleurs, mes études et mes formations m'ont apporté des bases solides dans divers langages de programmations et dans diverses technologies. 
+      				Titulaire d'un DUT en Informatique et d'une licence professionnelle APSIO, je souhaite me diriger vers le Développement Web.<br> Mes contrats de stages et d'alternances m'ont permis d'avoir des experiences professionnelles dans ces domaines et ont confirmé ce projet d'orientation. Ces experiences m'ont fait progresser en autonomie, puisque j'ai souvent essayé de trouver des solutions par mes propres moyens. J'ai également amélioré ma capacité d'adaptation car lors de mes projets, j'ai dû reprendre, adapter ou améliorer du code existant.  <br>Par ailleurs, mes études et mes formations m'ont apporté des bases solides dans divers langages de programmations et dans diverses technologies. 
       				</p>
                     </div>
                               <hr>
@@ -145,6 +145,26 @@
 
                                   <h3>Experience Professionnelle</h3>
                                     <table>
+					<tr>
+                                            <td>
+                                                <ul class="listeBord">
+                                                    <li>
+                                                        <div class="sujet">2016-2017 Alternance (en cours)</div> <div class="lieu">CGI</div>  <div class="ville">Développeur Web - Technicien Support</div>
+                                                        <ul class="description">
+                                                            <li>
+                                                                Technologies: AngularJS, PostgreSQL
+                                                            </li>
+                                                            <li>
+                                                                Logiciels: SpagoBi, Talend Open Studio
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </td>
+                                            <td class ="deuxiemeColonne">
+                                                <a href="http://www.cgi.fr/"><img src="img/" id="logoCGI" class="logo" title="Se rendre sur le site de CGI"></a>
+                                            </td>
+                                        </tr>    
                                         <tr>
                                             <td>
                                                 <ul class="listeBord">
@@ -152,10 +172,10 @@
                                                         <div class="sujet">2015-2016 Alternance (10 mois)</div> <div class="lieu">Rectorat de l'académie de Toulouse</div>  <div class="ville">Développeur Web - Maintenance d'application Web</div>
                                                         <ul class="description">
                                                             <li>
-                                                                Framework: Symfony 2
+                                                                Technologies: Symfony 2, MySQL, LDAP
                                                             </li>
                                                             <li>
-                                                                Base de données: MySQL
+                                                                Logiciels: Talend
                                                             </li>
                                                         </ul>
                                                     </li>
@@ -194,6 +214,18 @@
 
                                         <h3>Formation</h3>
                               <table>
+				  <tr>
+                                      <td>
+                                         <ul class="listeBord">
+                                              <li>
+                                                  <div class="sujet">2016-2017 Master en Ingénierie et Gestion de Projets Informatiques (alternance) IPI - Institut de Poly-Informatique</div> <div class="ville">Blagnac </div> <div class="lieu">Groupe IGS</div>
+                                              </li>
+                                         </ul>
+                                      </td>
+                                      <td class ="deuxiemeColonne">
+                                          <a href="http://www.ipi-ecoles.com/"><img src="http://www.lamelee.com/uploads/media/default/0001/08/061b13b52b64dbd8cc1a69efb88e69222b86f012.jpg" id="logoIPI" class="logo" title="Se rendre sur le site de l'IPI"></a>
+                                      </td>
+                                  </tr>    
                                   <tr>
                                       <td>
                                          <ul class="listeBord">
