--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                                 </ul>
                                             </td>
                                             <td class ="deuxiemeColonne">
-                                                <a href="http://www.cgi.fr/"><img src="img/" id="logoCGI" class="logo" title="Se rendre sur le site de CGI"></a>
+                                                <a href="http://www.cgi.fr/"><img src="http://portal.ent.cgi.com/lib/bs/comms/group/brd/cgi-logo-email-45x25.jpg" id="logoCGI" class="logo" title="Se rendre sur le site de CGI"></a>
                                             </td>
                                         </tr>    
                                         <tr>
